# network_builder/api/v1alpha1/zz_generated.deepcopy.go
@@ -70,13 +70,13 @@ func (in *CircuitGenieList) DeepCopyObject() runtime.Object {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *CircuitGenieSpec) DeepCopyInto(out *CircuitGenieSpec) {
 	*out = *in
-	if in.Nodes != nil {
-		in, out := &in.Nodes, &out.Nodes
+	if in.PortA != nil {
+		in, out := &in.PortA, &out.PortA
 		*out = make([]string, len(*in))
 		copy(*out, *in)
 	}
-	if in.NodeSelector != nil {
-		in, out := &in.NodeSelector, &out.NodeSelector
+	if in.PortB != nil {
+		in, out := &in.PortB, &out.PortB
 		*out = make([]string, len(*in))
 		copy(*out, *in)
 	}
@@ -801,7 +801,7 @@ func (in *SubnetGenie) DeepCopyInto(out *SubnetGenie) {
 	out.TypeMeta = in.TypeMeta
 	in.ObjectMeta.DeepCopyInto(&out.ObjectMeta)
 	out.Spec = in.Spec
-	in.Status.DeepCopyInto(&out.Status)
+	out.Status = in.Status
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new SubnetGenie.
@@ -966,11 +966,6 @@ func (in *SubnetGenieStateStatus) DeepCopy() *SubnetGenieStateStatus {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *SubnetGenieStatus) DeepCopyInto(out *SubnetGenieStatus) {
 	*out = *in
-	if in.Nodes != nil {
-		in, out := &in.Nodes, &out.Nodes
-		*out = make([]string, len(*in))
-		copy(*out, *in)
-	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new SubnetGenieStatus.
